--- a/reactwithasp.client/src/App.css
+++ b/reactwithasp.client/src/App.css
@@ -1,4 +1,7 @@
-﻿#root {
+﻿@import "tailwindcss";
+
+
+#root {
     max-width: 1280px;
     margin: 0 auto;
     padding: 2rem;
@@ -8,4 +11,16 @@
 th, td {
     padding-left: 1rem;
     padding-right: 1rem;
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
